<resources>
    <string-array name="fillModeKey" translatable="false">
    <item>left</item>
    	<item>right</item>
        <item>front</item>
        <item>front_specular</item>
        <item>top</item>
    </string-array>
    <string-array name="fallStyleKey" translatable="false">
    <item>one</item>
        <item>rain</item>
        <item>fixed</item>
    </string-array>
    <string-array name="paintModeKey" translatable="false">
    <item>color</item>
        <item>random</item>
        <item>default</item>
        <item>custom</item>
    </string-array>
    <string-array name="blockSizeKey" translatable="false">
    <item>small</item>
        <item>medium</item>
        <item>big</item>
    </string-array>
    <string-array name="fallSpeedKey" translatable="false">
    <item>slow</item>
        <item>medium</item>
        <item>fast</item>
        <item>fastest</item>
    </string-array>
    <string-array name="fpsKey" translatable="false">
    <item>slow</item>
        <item>medium</item>
        <item>fast</item>
    </string-array>
	<string name="app_name">Isobako</string>
    <string name="wallpaper_description">Isobako</string>
    <string-array name="fillMode">
    	<item>Front face (left)</item>
        <item>Front face (right)</item>
        <item>Front faces (both)</item>
        <item>Front faces (both, specular)</item>
        <item>Top face</item>
    </string-array>
    <string-array name="fallStyle">
        <item>One at a time</item>
        <item>Rain</item>
        <item>No falling (fast for any size)</item>
    </string-array>
    <string name="openGallery">Select picture</string>
    <string-array name="paintMode">
        <item>Solid color</item>
        <item>Random color</item>
        <item>Default pictures</item>
        <item>Custom picture</item>
    </string-array>
    <string-array name="blockSize">
        <item>Small</item>
        <item>Medium</item>
        <item>Big</item>
    </string-array>
    <string name="blockLimit">Limit quantity</string>
    <string name="colorSelector">Color</string>
    <string-array name="fallSpeed">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
        <item>Fastest</item>
    </string-array>
    <string name="advancedOptions">Advanced options</string>
    <string-array name="fps">
        <item>Slow (less battery)</item>
        <item>Medium</item>
        <item>Fast (more fluid)</item>
    </string-array>
    <string name="rainAmount">Rain amount</string>
    <string name="verticalOffset">Vertical offset</string>
    <string name="verticalOffsetTitle">Move the cube up or down (pixel value)</string>
    <string name="verticalOffsetButton">OK</string>
    <string name="verticalOffsetUp">Up</string>
    <string name="verticalOffsetDown">Down</string>
    <string name="verticalOffsetReset">Reset</string>
    <string name="waitTime">Anim. restart time (seconds)</string>
    <string name="backgroundColor">Background color</string>
    <string name="notesCategory">Informations</string>
    <string name="showLicence">License</string>
    <string name="blocksCategory">Blocks</string>
    <string name="fallCategory">Animation</string>
    <string name="styleCategory">Cube style</string>
    <string name="advancedCategory">Advanced</string>
    <string name="appMarketLink" translatable="false">KIKIJIKI</string>
    <string name="licenseOpenMarket">Open market</string>
    <string name="licenseExit">Exit</string>
    <string name="licenseWaiting">Waiting for authentication...</string>
    <string name="licenseError">This application license is not valid.\nTry running it again while connected to an internet network to activate it.\nIf it does not work, uninstall and download it again from the market.</string>
    <string name="licenseErrorTitle">License error</string>
    <string name="licenseOtherErrorTitle">Server error</string>
    <string name="licenceOtherError">An error has occured with the market licensing server. Please try again.</string>
    <string name="galleryPictureLabel">picture</string>
    <string name="galleryPicturesLabel">pictures</string>
    <string name="surfaceLoadError">Error loading selected picture</string>
    <string name="blockSizeSummaryOn">Limited to the screen size</string>
    <string name="blockSizeSummaryOff">Limited to the maximum (32)</string>
    <string name="resizeWarning">The picture is larger than the size of the cube and will be stretched. You can try using smaller blocks or disabling the block limit.</string>
    <string name="loadingMessage">Loading... (￣▽￣)ノ</string>
    <string name="ambilwarnaLicence"></string>
</resources>